update remaining problems